<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <speedtracker.gps.com.speedtracker.CustomSpeedGraph
        android:id="@+id/speed_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/gps_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_graph"
        android:layout_marginTop="5dp"
        android:text="@string/text_gps_active"/>

    <TextView
        android:id="@+id/txt_current_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps_active"
        android:layout_marginTop="5dp"
        android:text="@string/text_current_speed"/>

    <TextView
        android:id="@+id/txt_avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_current_speed"
        android:layout_marginTop="5dp"
        android:text="@string/text_average_speed"/>

    <TextView
        android:id="@+id/txt_overall_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_avg_speed"
        android:layout_marginTop="5dp"
        android:text="@string/text_overall_time"/>

    <Button
        android:id="@+id/btn_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_overall_time"
        android:layout_marginTop="5dp"
        android:text="@string/text_start_tracking"/>

</RelativeLayout>
